# neural-abstract-interpretation

./: LICENSE  div_zero.json  pyproject.toml
.cursor/rules/: ruff.mdc
docs/: implementation-plan.md  semantics.md
examples/: div_zero.c  simple.c
nai/: __init__.py  abstract.py  ast.py  cfg.py  cli.py  concrete.py  div_zero.py  neural_domain.py  parser.py  train.py
