[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-abstract-interpretation"
version = "0.1.0"
description = "Neural abstract interpretation MVP."
requires-python = ">=3.10"
dependencies = ["lark>=1.1.8", "torch>=2.0.0"]

[project.scripts]
nai = "nai.cli:main"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
